overflow fixed

--- a/styles/custom-css/view-employee.css
+++ b/styles/custom-css/view-employee.css
@@ -447,7 +447,7 @@ body {
    }
 
    .table-img {
-       width: 34px;
+       width: 45px;
        display: list-item;
        text-align: center;
        align-items: center;
